--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>UAXAN</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/hzg6sru.css">
         <!-- font-family: linotype-didot, serif; -->
@@ -10,65 +11,165 @@
 
     </head>
     <body>
-        <section class= "header">
-            <header class="header-content">
-                <figure class="header-logo">
-                    <img src="/users/zarag/UAXAN/logo-fullcolor.svg" alt="UAXAN">
-                </figure>
-                <div class="menusections">
-                    <ul>
-                        <li class="menu-item">Inicio</li>
-                        <li class="menu-item">
-                            <div class="ddown-menu">
-                                <button class="ddown-button">Tienda
-                                    <div class="ddown-content">
-                                        <a class="ddown-item">Por Producto</a>
-                                        <a class="ddown-item">Por Linea</a>
-                                    </div>
-                                </button>
-                            </div>
-                        </li>
-                        <li class="menu-item">Historia</li>
-                        <li class="menu-item">Contacto</li>
-                    </ul>
+      <div class="row">
+        <div class="col"></div>
+        <div class="col">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <div class="collapse navbar-collapse" id="navbarNavDropdown">
+              <ul class="navbar-nav align-bottom">
+                <li class="nav-item active">
+                  <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Tienda
+                  </a>
+                  <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Productos</a>
+                    <a class="dropdown-item" href="#">Linea</a>
+                  </div>
+                </li>
+                <li class="nav-item">
+                    <form class="logo-navbar">
+                      <img src="./svgs/logo-fullcolor.svg" alt="Logo Uaxan">
+                    </form>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Historia</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        </div>
+        <div class="col">
+          <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            </nav>
+        </div>
+      </div>
+      <section class="slide-gallery">
+        <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="./images/Banner _Compra Mexicano_.png" class="d-block w-100" alt="Compra mexicano">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>First slide label</h5>
+                <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/Banner_Quienes somos.png" class="d-block w-100" alt="Quienes Somos">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Second slide label</h5>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img src="./images/Banner_Linea Xkal.png" class="d-block w-100" alt="Linea Xkal">
+              <div class="carousel-caption d-none d-md-block">
+                <h5>Third slide label</h5>
+                <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="popular-products">
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col">
+            <div class="card-group">
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
-            </header>
-        </section>
-        <section class="slide-gallery">
-            <article>
-                <figure>
-                    <img src="" alt="Sillon Xkal">
-                </figure>
-                <div>
-                    <h1>
-                       Línea Xkal 
-                    </h1>
-                    <p>
-                        La línea xkal es una seria de muebles fabricados con madera de tzalam con respaldos tejidos en bejuco natural 
-                    </p>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
                 </div>
-            </article>
-            <article></article>
-            <article></article>
-            <article></article>
-        </section>
-        <!--Aqui va section historia y Contacto-->
-        <section></section>
-        <section></section>
-        <section>
-            <footer class="footer">
-                <div></div>
-                <article>
-                    <figure>
-                        <img src="" alt="">
-                    </figure>
-                    <p></p>
-                </article>
-                <div>
-                    <p></p>
+              </div>
+              <div class="card">
+                <img src="./images/Silla Esterilla Escandinavo.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
                 </div>
-            </footer>
-        </section>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#">
+                    <div class="row">
+                      <form class="text-muted">
+                        <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                      </form>
+                      <h6>¡Compra en un click!</h6>
+                    </div>
+                  </a>
+                </div>
+              </div>
+              <div class="card">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <small class="text-muted">Last updated 3 mins ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1"></div>
+        </div>
+      </section>
+      <!--Aqui va section historia y Contacto-->
+      <section></section>
+      <section></section>
+      <section>
+          <footer class="footer">
+              <div></div>
+              <article>
+                  <figure>
+                      <img src="" alt="">
+                  </figure>
+                  <p></p>
+              </article>
+              <div>
+                  <p></p>
+              </div>
+          </footer>
+      </section>
+      <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     </body>
 </html>
                     
