Adelnato 2.3 Uaxan con boton de compra en un click y mejoraestetica

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     </form>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Historia</a>
+                  <a class="nav-link" href="#historia-nosotros">Historia</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Contacto</a>
@@ -87,7 +87,13 @@
           </div>
         </div>
       </section>
-      <section class="popular-products">
+      <section class="popular-products" id="popular-products">
+        <div class="row popular-products-title">
+          <h1>Productos Populares</h1>
+          <a href="#popular-products" class="scrolly-popular-products">
+            <img src="./svgs/down_arrow.svg" alt="Down Arrow">
+          </a>
+        </div>
         <div class="row">
           <div class="col-1"></div>
           <div class="col">
@@ -128,15 +134,11 @@
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                 </div>
-                <div class="card-footer">
-                  <a href="#">
-                    <div class="row">
-                      <form class="text-muted">
-                        <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                      </form>
-                      <h6>¡Compra en un click!</h6>
-                    </div>
-                  </a>
+                <div class="card-footer"> 
+                  <div class="row">
+                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                    <h6>¡Compra en un click!</h6>
+                  </div>
                 </div>
               </div>
             </div>
@@ -146,7 +148,7 @@
       </section>
       <!--Aqui va section historia-->
 
-      <section class="historia">
+      <section class="historia" id="historia-nosotros">
         <div class="historia-img">
           <img src="./images/Amazon Tunik.png" alt="">
         </div>
