Adelanto version 2.4 trabajo en tarjetas con animacion css

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
           <nav class="fixed-top navbar navbar-expand-lg navbar-light" id="navbar-shrink">
             <div class="justify-content-center collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
-                <li class="nav-item active" id="navbar-bar-shrink">
+                <li class="nav-item active">
                   <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
                 </li>
-                <li class="nav-item dropdown" id="navbar-bar-shrink">
-                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Tienda
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -29,17 +29,14 @@
                     <a class="dropdown-item" href="#">Linea</a>
                   </div>
                 </li>
-                <li class="nav-item" id="navbar-bar-shrink">
+                <li class="nav-item">
                   <a href="#">
                     <form class="logo-navbar">
                       <img src="./svgs/logo-fullcolor.svg" alt="Logo Uaxan" id="full-logo">
                     </form>
-                    <form class="logo-imagotipo">
-                      <img src="./svgs/Icono Uaxan-26.svg" alt="Logo Uaxan" id="full-imagotipo">
-                    </form>
                   </a>
                 </li>
-                <li class="nav-item" id="navbar-bar-shrink">
+                <li class="nav-item">
                   <a class="nav-link" href="#historia-nosotros">Historia</a>
                 </li>
                 <li class="nav-item" id="navbar-bar-shrink">
