--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
           </div>
         </div>
       </section>
+
+      <!--Seccion de Productos Populares-->
+      
       <section class="popular-products" id="popular-products">
         <div class="row popular-products-title">
           <h1>Productos Populares</h1>
@@ -157,6 +160,7 @@
           <div class="col-1"></div>
         </div>
       </section>
+
       <!--Aqui va section historia-->
 
       <section class="historia" id="historia-nosotros">
@@ -168,12 +172,93 @@
           <p>Estos es un parragrafo no muy largo pero si los suficiente para que funcione como tal.
             todonos ijbcksdbsuebdañownndo eaj dieb wein eifhia nu enflei arifph eriv erli eri  jo.
           </p>
+        </div> 
+      </section>
+      <section class="nosotros">
+        <div class="nosotros-text">
+          <h1>Esto es Un Titulo</h1>
+          <p>Estos es un parragrafo no muy largo pero si los suficiente para que funcione como tal.
+            todonos ijbcksdbsuebdañownndo eaj dieb wein eifhia nu enflei arifph eriv erli eri  jo.
+          </p>
+        </div>
+        <div class="nosotros-img">
+          <img src="./images/Mesas Escandinava.png" alt="">
         </div>
       </section>
 
       <!--Aqui va la seccion Productos nuevos-->
+      <section class="new-products" id="new-products">
+        <div class="row popular-products-title">
+          <h1>Lo Nuevo</h1>
+          <a href="#new-products" class="scrolly-popular-products">
+            <img src="./svgs/down_arrow.svg" alt="Down Arrow">
+          </a>
+        </div>
+        <div class="row">
+          <div class="col-1"></div>
+          <div class="col">
+            <div class="card-group">
+              <div class="card">
+                <img src="./images/Mesa Cafetera Escandinava.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                </div>
+                <div class="card-footer">
+                  <div class="row">
+                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                    <h6>¡Compra en un click!</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./images/Mesas Escandinava.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                </div>
+                <div class="card-footer">
+                  <div class="row">
+                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                    <h6>¡Compra en un click!</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./images/Sillon Esterilla Escandinavo.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer">
+                  <div class="row">
+                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                    <h6>¡Compra en un click!</h6>
+                  </div>
+                </div>
+              </div>
+              <div class="card">
+                <img src="./images/Silla Cordon Escandinavo.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                </div>
+                <div class="card-footer"> 
+                  <div class="row">
+                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                    <h6>¡Compra en un click!</h6>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-1"></div>
+        </div>
+      </section>
 
       <!--Aqui va la seccion contacto-->
+
+
 
       <!--Aqui va el Footer-->
       <section></section>
@@ -207,4 +292,3 @@
         </script>
     </body>
 </html>
-                    
