--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://use.typekit.net/hzg6sru.css">
-        <!-- font-family: linotype-didot, serif; -->
+        <!-- font-family: 'linotype-didot', serif; -->
         <link rel="stylesheet" href="https://use.typekit.net/hzg6sru.css">
-        <!-- font-family: futura-pt, sans-serif;-->
+        <!-- font-family: 'futura-pt', sans-serif;-->
 
     </head>
     <body>
@@ -106,8 +106,10 @@
               <div class="card">
                 <img src="./images/Silla Escandinava Cordon.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <h5 class="card-title">Sillon X'kal</h5>
+                  <p class="card-text">Hecho en madera de tzalam, con repaldo tejido en cordon
+                    nautico. Ideal para espacios semi abiertos, como terrazas, valcones y palapas.
+                  </p>
                 </div>
                 <div class="card-footer">
                   <div class="row">
@@ -120,7 +122,7 @@
                 <img src="./images/Silla Esterilla Escandinavo.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  <p class="card-text">hola</p>
                 </div>
                 <div class="card-footer">
                   <div class="row">
@@ -133,7 +135,7 @@
                 <img src="./images/Amazon Tunik.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">hola</p>
                 </div>
                 <div class="card-footer">
                   <div class="row">
@@ -146,7 +148,7 @@
                 <img src="./images/Zapatera Kira.png" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  <p class="card-text">hola</p>
                 </div>
                 <div class="card-footer"> 
                   <div class="row">
@@ -159,6 +161,11 @@
           </div>
           <div class="col-1"></div>
         </div>
+        <div class="shop-action">
+          <button class="shop-action-button">
+            <h6>Conoce nuestra tienda</h6>
+          </button>
+        </div>
       </section>
 
       <!--Aqui va section historia-->
@@ -168,9 +175,14 @@
           <img src="./images/Amazon Tunik.png" alt="">
         </div>
         <div class="historia-text">
-          <h1>Esto es Un Titulo</h1>
-          <p>Estos es un parragrafo no muy largo pero si los suficiente para que funcione como tal.
-            todonos ijbcksdbsuebdañownndo eaj dieb wein eifhia nu enflei arifph eriv erli eri  jo.
+          <h1>UAXANTSÏKUA | [Ua-shan-s'i-cua]:.</h1>
+          <p>
+            Proviniente de la tranformación de la palabra uaxantsïkua que 
+            significa asiento, silla o banco, Uaxan es una marca de muebles 
+            que invoca al sentirse comodo, a sentirse en casa. 
+          </p>
+          <p>
+            Pasa, toma asiento.
           </p>
         </div> 
       </section>
@@ -258,7 +270,22 @@
 
       <!--Aqui va la seccion contacto-->
 
-
+      <section class="contacto">
+        <div>
+          <img src="" alt="">
+        </div>
+        <div>
+          <h6>Nombre</h6>
+          <input type="text">
+          <h6>Asunto</h6>
+          <input type="text">
+          <h6>escribenos lo que sea</h6>
+          <input type="text">
+          <h6>Email</h6>
+          <input type="email">
+          <button>Enviar</button>
+        </div>
+      </section>
 
       <!--Aqui va el Footer-->
       <section></section>
