--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       <section class="historia" id="historia-nosotros">
         <div class="historia-img">
-          <img src="./images/Amazon Tunik.png" alt="">
+          <img src="./images/Tuunik_Crop.png" alt="">
         </div>
         <div class="historia-text">
           <h1>UAXANTSÏKUA | [Ua-shan-s'i-cua]:.</h1>
@@ -187,14 +187,18 @@
         </div> 
       </section>
       <section class="nosotros">
-        <div class="nosotros-text">
-          <h1>Esto es Un Titulo</h1>
-          <p>Estos es un parragrafo no muy largo pero si los suficiente para que funcione como tal.
-            todonos ijbcksdbsuebdañownndo eaj dieb wein eifhia nu enflei arifph eriv erli eri  jo.
+        <div class="nosotros-text" id="nosotros-text">
+          <h1>De Playa para el mundo</h1>
+          <p>
+            Diseñamos, fabricamos y comercializamos nuestros 
+            productos desde el 2019 en Playa del Carmen, Quintana Roo. El 
+            estilo caribeño esta marcado en nuestra filosofía y 
+            nuestro diseño. Y hoy vendemos a todas la república mexicana 
+            con ganas de venderle a todo el globo terraquio.
           </p>
         </div>
-        <div class="nosotros-img">
-          <img src="./images/Mesas Escandinava.png" alt="">
+        <div class="nosotros-img" id="nosotros-img">
+          <img src="./images/Mesa Xkal_Crop.png" alt="">
         </div>
       </section>
 
@@ -213,7 +217,7 @@
               <div class="card">
                 <img src="./images/Mesa Cafetera Escandinava.png" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Mesita X'kal</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                 </div>
                 <div class="card-footer">
