--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <div class="col"></div>
         <div class="col">-->
           <nav class="fixed-top navbar navbar-expand-lg navbar-light" id="navbar-shrink">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="justify-content-center collapse navbar-collapse" id="navbarNavDropdown">
               <ul class="navbar-nav">
                 <li class="nav-item active">
@@ -99,76 +102,72 @@
             <img src="./svgs/down_arrow.svg" alt="Down Arrow">
           </a>
         </div>
-        <div class="row">
-          <div class="col-1"></div>
-          <div class="col">
-            <div class="card-group">
-              <div class="card">
-                <img src="./images/Silla Escandinava Cordon.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Sillon X'kal</h5>
-                  <p class="card-text">Hecho en madera de tzalam, con repaldo tejido en cordon
-                    nautico. Ideal para espacios semi abiertos, como terrazas, valcones y palapas.
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./images/Silla Esterilla Escandinavo.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">hola</p>
-                </div>
-                <div class="card-footer">
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./images/Amazon Tunik.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">hola</p>
-                </div>
-                <div class="card-footer">
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./images/Zapatera Kira.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">hola</p>
-                </div>
-                <div class="card-footer"> 
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
+        <div class="card-group">
+          <div class="card">
+            <img src="./images/Silla Escandinava Cordon.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Sillon X'kal</h5>
+              <p class="card-text">
+                Hecho en madera de tzalam, con respaldo tejido en cordon 
+                nautico. Ideal para espacios semi abiertos, como terrazas, 
+                valcones y palapas.
+              </p>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
               </div>
             </div>
           </div>
-          <div class="col-1"></div>
+          <div class="card">
+            <img src="./images/Silla Esterilla Escandinavo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">hola</p>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Amazon Tunik.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">hola</p>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Zapatera Kira.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">hola</p>
+            </div>
+            <div class="card-footer"> 
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
+              </div>
+            </div>
+          </div>
         </div>
         <div class="shop-action">
-          <button class="shop-action-button">
-            <h6>Conoce nuestra tienda</h6>
-          </button>
+          <a href="./tiendaPorLinea.html" target="_self" class="shop-action-button">
+            <h6>Conoce nuestras lineas</h6>
+          </a>
         </div>
       </section>
 
-      <!--Aqui va section historia-->
+      <!--Aqui va section nosotros-->
 
       <section class="historia" id="historia-nosotros">
         <div class="historia-img">
@@ -177,7 +176,7 @@
         <div class="historia-text">
           <h1>UAXANTSÏKUA | [Ua-shan-s'i-cua]:.</h1>
           <p>
-            Proviniente de la tranformación de la palabra uaxantsïkua que 
+            Proviniente de la tranformación de la palabra purepecha, uaxantsïkua que 
             significa asiento, silla o banco, Uaxan es una marca de muebles 
             que invoca al sentirse comodo, a sentirse en casa. 
           </p>
@@ -210,65 +209,64 @@
             <img src="./svgs/down_arrow.svg" alt="Down Arrow">
           </a>
         </div>
-        <div class="row">
-          <div class="col-1"></div>
-          <div class="col">
-            <div class="card-group">
-              <div class="card">
-                <img src="./images/Mesa Cafetera Escandinava.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Mesita X'kal</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                </div>
-                <div class="card-footer">
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./images/Mesas Escandinava.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-                </div>
-                <div class="card-footer">
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./images/Sillon Esterilla Escandinavo.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                </div>
-                <div class="card-footer">
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
-              </div>
-              <div class="card">
-                <img src="./images/Silla Cordon Escandinavo.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                </div>
-                <div class="card-footer"> 
-                  <div class="row">
-                    <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
-                    <h6>¡Compra en un click!</h6>
-                  </div>
-                </div>
+        <div class="card-group">
+          <div class="card">
+            <img src="./images/Mesa Cafetera Escandinava.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Mesita X'kal</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
               </div>
             </div>
           </div>
-          <div class="col-1"></div>
+          <div class="card">
+            <img src="./images/Mesas Escandinava.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Sillon Esterilla Escandinavo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer">
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <img src="./images/Silla Cordon Escandinavo.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+            <div class="card-footer"> 
+              <div class="row">
+                <img src="./svgs/Icono Click_Mesa de trabajo 1.svg" alt="Da Click">
+                <h6>¡Compra en un click!</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="shop-action">
+          <a href="./tiendaPorProducto.html" target="_self" class="shop-action-button">
+            <h6>Conoce nuestros muebles</h6>
+          </a>
         </div>
       </section>
 
